--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
     <string name="app_name">Nephilos</string>
-
+    <string name="app_version">0.1</string>
+    <string name="gitHubUrl">https://github.com/BlackGhost0051</string>
+    <string name="gitHubRepoUrl">https://github.com/BlackGhost0051/Nephilos</string>
 
     <string name="open">open</string>
     <string name="close">close</string>
-
-    <string name="gitHubUrl">https://github.com/BlackGhost0051</string>
-    <string name="gitHubRepoUrl">https://github.com/BlackGhost0051/Nephilos</string>
 </resources>
