--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <string name="open">open</string>
     <string name="close">close</string>
+
+    <string name="interface_name"></string>
 </resources>
