--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,11 @@
     <string name="open">open</string>
     <string name="close">close</string>
 
-    <string name="interface_name"></string>
 
 
 
+    <string name="interface_name_title">interface_name_title</string>
+    <string name="interface_name_summary">interface_name_summary</string>
 
     <string name="theme_preference_title">Select Theme</string>
     <string name="theme_preference_summary">Choose the application theme</string>
