--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,17 @@
     <string name="open">open</string>
     <string name="close">close</string>
 
+    <!-- Toolbar -->
+    <string name="toolbar_wifi_scanner">Wifi Scanner</string>
+    <string name="toolbar_port_scanner">Port Scanner</string>
+    <string name="toolbar_mac_scanner">Mac Scanner</string>
+    <string name="toolbar_arp_spoof">Arp Spoof</string>
+    <string name="toolbar_settings">Settings</string>
+
+
+
+
+
     
     
     <string name="PortScannerFragment_EditText_ipInput_hint">Enter IP Address</string>
